menghilangkan foto profil di livestreaming

--- a/livestreaming.html
+++ b/livestreaming.html
@@ -34,7 +34,7 @@
                             <a class="dropdown-item" href="#">Logout</a>
                         </li>
                         <!-- Foto Profil -->
-                            <img src="img/5d7e27b07cf5d.png" alt="hi" class="img-thumbnail2">
+                            <!-- <img src="img/5d7e27b07cf5d.png" alt="hi" class="img-thumbnail2"> -->
                     </ul>
                 </div>
             </div>
@@ -52,11 +52,11 @@
 
                     <div class="chat">
                         <div class="user-photo"><img src="img/default.png"></div>
-                        <p class="chat-message">Bismillah</p>
+                        <p class="chat-message">Seru banget nih filmnya</p>
                     </div>
                     <div class="chat">
                         <div class="user-photo"><img src="img/default.png"></div>
-                        <p class="chat-message">HaiiHaii Namaku Zahra, Camin AJK. Doain ya temen-temen biar aku bisa jadi Admin AJK, Aamiin.</p>
+                        <p class="chat-message">Eh Iya, bener banget</p>
                     </div>
 
                 </div>
